--- a/src/components/ContainerParent/ContainerCard/ContainerCard.css
+++ b/src/components/ContainerParent/ContainerCard/ContainerCard.css
@@ -42,14 +42,14 @@
     height: 100%;
     transition: 0.5s;
   }
-
+/* 
 h1 { 
     color: #353535;
     font-family: "Krona One", sans-serif;
     text-transform: uppercase;
     font-size: 18px;
     margin: 20px 20px 0 20px;
-}
+} */
 
 h4 {
     margin-top: 6px;
