--- a/src/components/DesignParent/DesignCard/DesignCard.css
+++ b/src/components/DesignParent/DesignCard/DesignCard.css
@@ -43,13 +43,13 @@
     transition: 0.5s;
   }
 
-h1 { 
+/* h1 { 
     color: #353535;
     font-family: "Krona One", sans-serif;
     text-transform: uppercase;
     font-size: 18px;
     margin: 20px 20px 0 20px;
-}
+} */
 
 h4 {
     margin-top: 6px;
