--- a/src/components/DesignParent/Designs/Designs.css
+++ b/src/components/DesignParent/Designs/Designs.css
@@ -6,8 +6,8 @@
 }
 
 .design_intro {
-  margin-top: 10vh;
-  padding: 28px;
+  margin: 10vh 0 10px 0;
+  padding: 28px 38px 28px 38px;
   font-family: "Lato", sans-serif;
   font-size: 18px;
   line-height: 24px;
@@ -16,7 +16,8 @@
 .design_intro h1 {
   font-family: "Krona One", sans-serif;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 34px;
+  margin-bottom: 30px;
 }
 
 .sub_categories {
