--- a/src/components/PlantParent/Plants/Plants.css
+++ b/src/components/PlantParent/Plants/Plants.css
@@ -17,8 +17,8 @@
 }
 
 .plant_intro {
-  margin-top: 10vh;
-  padding: 28px;
+  margin: 10vh 0 10px 0;
+  padding: 28px 38px 28px 38px;
   font-family: "Lato", sans-serif;
   font-size: 18px;
   line-height: 24px;
@@ -27,7 +27,8 @@
 .plant_intro h1 {
   font-family: "Krona One", sans-serif;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 34px;
+  margin-bottom: 30px;
 }
 
 .sub_categories {
