--- a/src/components/DesignParent/PlantCare/PlantCare.css
+++ b/src/components/DesignParent/PlantCare/PlantCare.css
@@ -1,4 +1,4 @@
-.body {
+.care_body {
     height: auto;
     min-height: 100vh;
     display: flex;
@@ -6,7 +6,7 @@
     align-items: center;
   }
   
-  h2 {
+.care-body h2 {
       margin: 0;
       color: black;
   }
