--- a/src/components/DesignParent/Staging/Staging.css
+++ b/src/components/DesignParent/Staging/Staging.css
@@ -1,4 +1,4 @@
-.body {
+.staging_body {
   height: auto;
   min-height: 100vh;
   display: flex;
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-h2 {
+.staging_body h2 {
     margin: 0;
     color: black;
 }
