--- a/src/components/PlantParent/PlantCategories/PlantCategories.css
+++ b/src/components/PlantParent/PlantCategories/PlantCategories.css
@@ -4,18 +4,18 @@
   position: relative;
 }
 
-.category_intro {
-  padding: 28px;
+.plant_category_intro {
+  padding: 28px 38px 28px 38px;
   font-family: "Lato", sans-serif;
   font-size: 18px;
   line-height: 24px;
-  margin: 0 5% 0 5%;
 }
 
-.category_intro h1 {
+.plant_category_intro h1 {
   font-family: "Krona One", sans-serif;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 32px;
+  margin-bottom: 30px;
 }
 
 .dragbox {
