--- a/src/components/PlantParent/PlantCategories/PlantCategories.css
+++ b/src/components/PlantParent/PlantCategories/PlantCategories.css
@@ -4,6 +4,11 @@
   position: relative;
 }
 
+.plant_content_container {
+  position: relative;
+  margin-bottom: 60px;
+}
+
 .plant_category_intro {
   padding: 28px 38px 28px 38px;
   font-family: "Lato", sans-serif;
